# neat

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  hie.yaml  neat.cabal  stack.yaml  stack.yaml.frozen  stack.yaml.molten
app/: Eval.hs  Main.hs  Opts.hs  Utils.hs
src/: Neat.hs  Prelude.hs
src/Extras/: Random.hs
src/Neat/: Generation.hs  Interface.hs  Internals.hs  Run.hs  Types.hs  Utils.hs
test/Neat/: GenerationSpec.hs  InterfaceSpec.hs  TypesSpec.hs  UtilsSpec.hs
