cabal-version:       2.0
name:                neat
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/Nolrai/neat
bug-reports:         https://github.com/Nolrai/neat/issues
license:             MIT
license-file:        LICENSE
author:              Chris A. Upshaw
maintainer:          chrisaupshaw.work@gmail.com
copyright:           2020 Chris A. Upshaw
category:            Machine Learning
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.1

source-repository head
  type:                git
  location:            https://github.com/Nolrai/neat.git

library
  hs-source-dirs:      src
  exposed-modules:     Neat
                       Prelude
                       Neat.Interface
                       Neat.Types
                       Neat.Generation
                       Neat.Utils

  build-depends:       base-noprelude ^>= 4.13.0.0
                     , relude
                     , moo
                     , grenade
                     , vector
                     , hashable
                     , MonadRandom
                     , containers
                     , lens
                     , linear
                     , random
                     , random-extras
                     , random-fu
                     , rvar
                     , array

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010

executable Neat
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Opts
                     , Eval

  build-depends:       base-noprelude ^>= 4.13.0.0
                     , neat
                     , relude
                     , grenade
                     , optparse-applicative
                     , containers
                     , random
                     , random-extras
                     , random-fu
                     , rvar
                     , hashable

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010

test-suite neat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  other-modules:       Neat.GenerationSpec
                       Neat.InterfaceSpec
                       Neat.TypesSpec
                       Neat.UtilsSpec

  build-depends:       base-noprelude ^>= 4.13.0.0
                     , neat
                     , relude
                     , hspec
                     , QuickCheck
                     , containers
                     , rvar
                     , random-fu
                     , random-source
                     , lens
                     , vector
                     , transformers

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010

benchmark neat-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs

  build-depends:       base-noprelude ^>= 4.13.0.0
                     , gauge
                     , neat
                     , relude

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010
